--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: mikaeldui/actions/nupkg/dotnet/build-and-pack.yml@main
+    - uses: mikaeldui/actions/nupkg/dotnet/build-and-pack@main
 
   nuget-org:
     name: 'NuGet.org'
