--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,8 @@ jobs:
   build:
     name: 'Build & Pack'
     uses: mikaeldui/actions/.github/workflows/dotnet-build-and-pack.yml@main
+    with:
+      project_directory: ./{{RepositoryName}}
 
   nuget-org:
     name: 'NuGet.org'
