--- a/RepositoryName/ProjectName.csproj
+++ b/RepositoryName/ProjectName.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\ChampionMasteryGg-512x512.png">
+    <None Include="..\Icon.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -27,10 +27,6 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MikaelDui.Extensions" Version="*" />
   </ItemGroup>
 
 </Project>
