--- a/.github/workflows/repository-creation.yml
+++ b/.github/workflows/repository-creation.yml
@@ -9,8 +9,8 @@ jobs:
     - name: Checkout the newly created repo
       uses: actions/checkout@v2
 
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1.5.0
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
         
