--- a/.github/workflows/repository-creation.yml
+++ b/.github/workflows/repository-creation.yml
@@ -1,10 +1,10 @@
 name: Repository Creation
-on: 
-  create:
+on: push
 
 jobs:
   create:
     name: 'Create content'
+    if: ${{ github.repository != "mikaeldui/nupkg-template" }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout the newly created repo
