--- a/.github/workflows/repository-creation.yml
+++ b/.github/workflows/repository-creation.yml
@@ -36,8 +36,8 @@ jobs:
         grep -RiIl '{{Description}}' | xargs sed -i 's/{{Description}}/${{ steps.description.outputs.description }}/g'
         grep -RiIl '{{Tags}}' | xargs sed -i 's/{{Tags}}/${{ steps.description.outputs.ptags }}/g'
         grep -RiIl '{{Package}}' | xargs sed -i 's/{{Package}}/${{ steps.description.outputs.package }}/g'
-        grep -RiIl '{{OwnerName}}' | xargs sed -i 's/{{Package}}/${{ steps.name.outputs.name }}/g'
-        grep -RiIl '{{RepositoryUrl}}' | xargs sed -i 's/{{Package}}/${{ github.event.repository.url }}/g'
+        grep -RiIl '{{OwnerName}}' | xargs sed -i 's/{{OwnerName}}/${{ steps.name.outputs.name }}/g'
+        grep -RiIl '{{RepositoryUrl}}' | xargs sed -i 's/{{RepositoryUrl}}/${{ github.event.repository.url }}/g'
      
     - name: Fix README.md
       run: echo "Hello"
